[package]
name = "ekero"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
keywords = ["http", "tcp"]
description = "simple http routing"
readme = "readme.md"
authors = [
    "Elisey Dudin <dudinelisey630@gmail.com>",
    "Webbop <webbop@pm.me>",
    "Maksim Bondarenkov",
]
repository = "https://github.com/rosewareorg/ekero"

[dependencies]
httparse = "1.10.0"
log = "0.4.25"

[dev-dependencies]
clang_log = "2.0.5"
